--- a/app/src/main/res/layout/activity_patient_list.xml
+++ b/app/src/main/res/layout/activity_patient_list.xml
@@ -96,14 +96,16 @@
                 android:orientation="horizontal"
                 android:padding="15dp">
 
+
             <ImageView
-                    android:id="@+id/imageView55"
-                    android:layout_width="35dp"
-                    android:layout_height="33dp"
-                    android:contentDescription="TODO"
-                    app:srcCompat="@drawable/red_circle"
-                    tools:layout_editor_absoluteX="41dp"
-                    tools:layout_editor_absoluteY="232dp" />
+                android:id="@+id/patient_status_indicator"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/red_circle"
+                android:layout_margin="8dp"
+                app:tint="@color/red"
+                android:contentDescription="TODO" />
+
 
             <TextView
                     android:layout_width="wrap_content"
